--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="wrapper">
 
-		<div class="main-card">
+		<section class="main-card">
 		
 			<!--Logo-->
 				
@@ -42,7 +42,7 @@
 
 			</form>
 
-		</div>
+		</section>
 
 	</div>
 	
