Use Flexbox to center main_card vertically

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<div class="wrapper">
 
-			<section class="main_card">
+			<div class="main_card">
 			
 				<!--Logo-->
 					
@@ -37,7 +37,7 @@
 
 				</form>
 
-			</section>
+			</div>
 
 		</div>
 		
